--- a/view/layout/admin.phtml
+++ b/view/layout/admin.phtml
@@ -15,6 +15,7 @@
         <!-- Le styles -->
         <?=
                 $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
+                ->prependStylesheet($this->basePath('dartalla/css/app.css'))
                 ->prependStylesheet($this->basePath('icons/fontawesome/css/all.min.css'))
                 ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
         ?>
@@ -25,7 +26,7 @@
         ?>
     </head>
     <body>
-        <?= $this->partial('header'); ?>
+        <?php echo $this->partial('header'); ?>
         <div id="wrapper">
             <?= $this->partial('sidebar'); ?>
             <div id="content">
