--- a/view/layout/breadcrumbs.phtml
+++ b/view/layout/breadcrumbs.phtml
@@ -1,11 +1,13 @@
-<ol class="breadcrumb mb-3 bg-secondary position-fixed rounded-0 w-100">
-    <?php foreach ($this->pages as $key => $page): ?>
-        <li class="breadcrumb-item text-white-50">
-            <?php if ($key < count($this->pages) - 1): ?>
-                <a href="<?= $page->getHref(); ?>"><?= $page->getLabel(); ?></a>
-            <?php else: ?>
-                <?= $page->getLabel(); ?>
-            <?php endif; ?>
-        </li>
-    <?php endforeach; ?>
-</ol>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <?php foreach ($this->pages as $key => $page): ?>
+            <li class="breadcrumb-item">
+                <?php if ($key < count($this->pages) - 1): ?>
+                    <a href="<?= $page->getHref(); ?>" aria-current="page"><?= $page->getLabel(); ?></a>
+                <?php else: ?>
+                    <?= $page->getLabel(); ?>
+                <?php endif; ?>
+            </li>
+        <?php endforeach; ?>
+    </ol>
+</nav>
