--- a/view/layout/header.phtml
+++ b/view/layout/header.phtml
@@ -1,33 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" role="navigation">
-    <a class="navbar-brand" href="<?= $this->url('dtl-admin') ?>">
-        <img src="<?= $this->basePath('img/dartalla-brand.png') ?>" height="30" alt=""/>&nbsp;Dartalla
-    </a>
-    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle Navigation">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" role="navigation">
+    <a class="navbar-brand mb-0 h1" href="<?= $this->url('dtl-admin'); ?>">Dartalla</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dtlNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
+
+    <div class="collapse navbar-collapse" id="dtlNavbar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
+
             </li>
         </ul>
         <?php if ($this->identity()): ?>
-            <div class="navbar-nav dropdown">
-                    
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenu">
-                    <a href="#" class="dropdown-item">
-                        <i class="fa fa-user"></i> Editar Perfil
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="<?= $this->url('logout'); ?>" class="dropdown-item">
-                        <i class="fas fa-sign-out-alt" aria-hidden="true"></i> Sair
-                    </a>
-                </div>
-            </div>
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="" class="btn btn-outline-secondary ml-1">
-                        <i class="fas fa-sign-out-alt"></i>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dtlNavbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <?= $this->identity()->getFullName(); ?>
                     </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dtlNavbarDropdown">
+                        <a href="#" class="dropdown-item">
+                            <i class="fas fa-user"></i> Editar Perfil
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a href="<?= $this->url('logout'); ?>" class="dropdown-item">
+                            <i class="fas fa-sign-out-alt"></i> Sair
+                        </a>
+                    </div>
                 </li>
             </ul>
         <?php endif; ?>
