--- a/view/layout/header.phtml
+++ b/view/layout/header.phtml
@@ -6,9 +6,8 @@
 
     <div class="collapse navbar-collapse" id="dtlNavbar">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-
-            </li>
+            <li class="nav-item"></li>
+            <?= $this->partial('sidebar'); ?>
         </ul>
         <?php if ($this->identity()): ?>
             <ul class="navbar-nav">
