--- a/view/layout/admin.phtml
+++ b/view/layout/admin.phtml
@@ -16,7 +16,7 @@
         <?=
                 $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
                 ->prependStylesheet($this->basePath('dartalla/css/app.css'))
-                ->prependStylesheet($this->basePath('icons/fontawesome/css/all.min.css'))
+                ->prependStylesheet($this->basePath('dartalla/fontawesome/css/all.min.css'))
                 ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
         ?>
 
@@ -27,20 +27,19 @@
     </head>
     <body>
         <?php echo $this->partial('header'); ?>
-        <div id="wrapper">
-            <div id="content">
-                <?=
-                        $this->navigation('navigation')
-                        ->breadcrumbs()
-                        ->setMinDepth(0)
-                        ->setSeparator(' ▶' . PHP_EOL)
-                        ->setPartial('breadcrumbs');
-                ?>
-                <?= $this->content ?>
-            </div>
+        <?=
+                $this->navigation('navigation')
+                ->breadcrumbs()
+                ->setMinDepth(0)
+                ->setSeparator(' ▶' . PHP_EOL)
+                ->setPartial('breadcrumbs');
+        ?>
+        <div class="container">
+            <?= $this->content ?>
         </div>
         <?=
                 $this->inlineScript()
+                ->prependFile($this->basePath('dartalla/js/app.js'))
                 ->prependFile($this->basePath('js/bootstrap.min.js'))
                 ->prependFile($this->basePath('js/jquery-3.4.1.min.js'))
         ?>
